# erpnext-api-client

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.org  erpnext-api-client.cabal  flake.nix  stack.yaml
scripts/: gen-openapi-yaml.sh
src/ERPNext/: Client.hs
src/ERPNext/Client/: Filters.hs  Helper.hs  QueryStringParams.hs
test/: Main.hs
