cabal-version:       3.6

name:                erpnext-api-client
version:             0.0.0.1
synopsis:            xxx
description:         xxx
homepage:            xxx
license:             MIT
license-file:        LICENSE
author:              Jakob Schöttl
maintainer:          jakob.schoettl@intensovet.de
copyright:           2025 Intensovet GmbH
category:            API
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     ERPNext.Client
                     , ERPNext.Client.Helper
                     , ERPNext.Client.Filters
                     , ERPNext.Client.QueryStringParams
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , http-types
                     , text
                     , aeson
                     , time
                     , network-uri
                     , bytestring
  default-language:    GHC2021
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
