cabal-version:       3.6

name:                erpnext-api-client
version:             0.2.0.0
synopsis:            Generic API client library for ERPNext
description:         This is a Haskell API client for ERPNext. It aims to be a light-weight library based on http-client and user-provided record types.
homepage:            https://github.com/schoettl/erpnext-api-client
license:             MIT
license-file:        LICENSE
author:              Jakob Schöttl, Omar Elbeltagui
maintainer:          jakob.schoettl@intensovet.de
copyright:           2025 Intensovet GmbH
category:            API
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     ERPNext.Client
                     , ERPNext.Client.Helper
                     , ERPNext.Client.Filters
                     , ERPNext.Client.QueryStringParams
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , http-types
                     , text
                     , aeson
                     , time
                     , network-uri
                     , bytestring
  default-language:    GHC2021
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       ERPNext.Client
                     , ERPNext.Client.Helper
                     , ERPNext.Client.Filters
                     , ERPNext.Client.QueryStringParams
  hs-source-dirs:      test
                     , src
  build-depends:       base
                     , erpnext-api-client
                     , http-client
                     , http-types
                     , text
                     , aeson
                     , time
                     , network-uri
                     , bytestring
                     , doctest >= 0.22.2 && < 1
                     , hedgehog >= 1.4 && < 1.6
                     , hspec >= 2.11.7 && < 2.12
                     , hspec-hedgehog >= 0.1.0
  default-language:    GHC2021
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
